@@ -22,11 +22,13 @@ import org.apache.kafka.connect.runtime.Herder;
 import org.apache.kafka.connect.runtime.rest.RestClient;
 import org.apache.kafka.connect.runtime.rest.RestServer;
 import org.apache.kafka.connect.runtime.rest.RestServerConfig;
-import org.apache.kafka.connect.runtime.rest.resources.ConnectResource;
 
-import java.util.Arrays;
+import org.glassfish.hk2.api.TypeLiteral;
+import org.glassfish.hk2.utilities.binding.AbstractBinder;
+import org.glassfish.jersey.server.ResourceConfig;
+
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 public class MirrorRestServer extends RestServer {
@@ -45,15 +47,25 @@ public class MirrorRestServer extends RestServer {
     }
 
     @Override
-    protected Collection<ConnectResource> regularResources() {
-        return Arrays.asList(
-                new InternalMirrorResource(herders, restClient)
-        );
+    protected Collection<Class<?>> regularResources() {
+        return List.of(InternalMirrorResource.class);
     }
 
     @Override
-    protected Collection<ConnectResource> adminResources() {
-        return Collections.emptyList();
+    protected Collection<Class<?>> adminResources() {
+        return List.of();
     }
 
+    @Override
+    protected void configureRegularResources(ResourceConfig resourceConfig) {
+        resourceConfig.register(new Binder());
+    }
+
+    private class Binder extends AbstractBinder {
+        @Override
+        protected void configure() {
+            bind(herders).to(new TypeLiteral<Map<SourceAndTarget, Herder>>() { });
+            bind(restClient).to(RestClient.class);
+        }
+    }
 }
