@@ -20,7 +20,6 @@ import org.apache.kafka.common.config.ConfigDef;
 import org.apache.kafka.common.config.ConfigException;
 import org.apache.kafka.connect.util.TopicAdmin;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
@@ -98,15 +97,15 @@ public class TopicCreationConfig {
         }
     }
 
-    public static ConfigDef configDef(String group, short defaultReplicationFactor, int defaultParitionCount) {
+    public static ConfigDef configDef(String group, short defaultReplicationFactor, int defaultPartitionCount) {
         int orderInGroup = 0;
         ConfigDef configDef = new ConfigDef();
         configDef
-                .define(INCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, Collections.emptyList(),
+                .define(INCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, List.of(),
                         REGEX_VALIDATOR, ConfigDef.Importance.LOW,
                         INCLUDE_REGEX_DOC, group, ++orderInGroup, ConfigDef.Width.LONG,
                         "Inclusion Topic Pattern for " + group)
-                .define(EXCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, Collections.emptyList(),
+                .define(EXCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, List.of(),
                         REGEX_VALIDATOR, ConfigDef.Importance.LOW,
                         EXCLUDE_REGEX_DOC, group, ++orderInGroup, ConfigDef.Width.LONG,
                         "Exclusion Topic Pattern for " + group)
@@ -115,7 +114,7 @@ public class TopicCreationConfig {
                         ConfigDef.Importance.LOW, REPLICATION_FACTOR_DOC, group, ++orderInGroup,
                         ConfigDef.Width.LONG, "Replication Factor for Topics in " + group)
                 .define(PARTITIONS_CONFIG, ConfigDef.Type.INT,
-                        defaultParitionCount, PARTITIONS_VALIDATOR,
+                        defaultPartitionCount, PARTITIONS_VALIDATOR,
                         ConfigDef.Importance.LOW, PARTITIONS_DOC, group, ++orderInGroup,
                         ConfigDef.Width.LONG, "Partition Count for Topics in " + group);
         return configDef;
@@ -129,7 +128,7 @@ public class TopicCreationConfig {
                         new ConfigDef.NonNullValidator(), ConfigDef.Importance.LOW,
                         INCLUDE_REGEX_DOC, DEFAULT_TOPIC_CREATION_GROUP, ++orderInGroup, ConfigDef.Width.LONG,
                         "Inclusion Topic Pattern for " + DEFAULT_TOPIC_CREATION_GROUP)
-                .define(EXCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, Collections.emptyList(),
+                .define(EXCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, List.of(),
                         new ConfigDef.NonNullValidator(), ConfigDef.Importance.LOW,
                         EXCLUDE_REGEX_DOC, DEFAULT_TOPIC_CREATION_GROUP, ++orderInGroup, ConfigDef.Width.LONG,
                         "Exclusion Topic Pattern for " + DEFAULT_TOPIC_CREATION_GROUP)
