@@ -23,17 +23,21 @@ import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.connect.runtime.TargetState;
 import org.apache.kafka.connect.runtime.distributed.WorkerCoordinator.ConnectorsAndTasks;
-import org.apache.kafka.connect.util.ConnectUtils;
+import org.apache.kafka.connect.storage.AppliedConnectorConfig;
 import org.apache.kafka.connect.storage.ClusterConfigState;
+import org.apache.kafka.connect.util.ConnectUtils;
 import org.apache.kafka.connect.util.ConnectorTaskId;
-import org.junit.Before;
-import org.junit.Test;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -46,15 +50,17 @@ import java.util.stream.IntStream;
 import static org.apache.kafka.connect.runtime.distributed.IncrementalCooperativeAssignor.ClusterAssignment;
 import static org.apache.kafka.connect.runtime.distributed.WorkerCoordinator.WorkerLoad;
 import static org.apache.kafka.connect.util.ConnectUtils.transformValues;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.notNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.STRICT_STUBS)
 public class IncrementalCooperativeAssignorTest {
 
     // Offset isn't used in most tests but is required for creating a config snapshot object,
@@ -69,7 +75,7 @@ public class IncrementalCooperativeAssignorTest {
     private ClusterAssignment returnedAssignments;
     private Map<String, ConnectorsAndTasks> memberAssignments;
 
-    @Before
+    @BeforeEach
     public void setup() {
         generationId = 1000;
         time = Time.SYSTEM;
@@ -654,9 +660,9 @@ public class IncrementalCooperativeAssignorTest {
         List<WorkerLoad> expectedAssignment = existingAssignment.stream()
                 .map(wl -> new WorkerLoad.Builder(wl.worker()).withCopies(wl.connectors(), wl.tasks()).build())
                 .collect(Collectors.toList());
-        expectedAssignment.get(0).connectors().addAll(Arrays.asList("connector6", "connector9"));
-        expectedAssignment.get(1).connectors().addAll(Arrays.asList("connector7", "connector10"));
-        expectedAssignment.get(2).connectors().addAll(Arrays.asList("connector8"));
+        expectedAssignment.get(0).connectors().addAll(List.of("connector6", "connector9"));
+        expectedAssignment.get(1).connectors().addAll(List.of("connector7", "connector10"));
+        expectedAssignment.get(2).connectors().add("connector8");
 
         List<String> newConnectors = newConnectors(6, 11);
         assignor.assignConnectors(existingAssignment, newConnectors);
@@ -674,13 +680,13 @@ public class IncrementalCooperativeAssignorTest {
                 .map(wl -> new WorkerLoad.Builder(wl.worker()).withCopies(wl.connectors(), wl.tasks()).build())
                 .collect(Collectors.toList());
 
-        expectedAssignment.get(0).connectors().addAll(Arrays.asList("connector6", "connector9"));
-        expectedAssignment.get(1).connectors().addAll(Arrays.asList("connector7", "connector10"));
-        expectedAssignment.get(2).connectors().addAll(Arrays.asList("connector8"));
+        expectedAssignment.get(0).connectors().addAll(List.of("connector6", "connector9"));
+        expectedAssignment.get(1).connectors().addAll(List.of("connector7", "connector10"));
+        expectedAssignment.get(2).connectors().add("connector8");
 
-        expectedAssignment.get(0).tasks().addAll(Arrays.asList(new ConnectorTaskId("task", 6), new ConnectorTaskId("task", 9)));
-        expectedAssignment.get(1).tasks().addAll(Arrays.asList(new ConnectorTaskId("task", 7), new ConnectorTaskId("task", 10)));
-        expectedAssignment.get(2).tasks().addAll(Arrays.asList(new ConnectorTaskId("task", 8)));
+        expectedAssignment.get(0).tasks().addAll(List.of(new ConnectorTaskId("task", 6), new ConnectorTaskId("task", 9)));
+        expectedAssignment.get(1).tasks().addAll(List.of(new ConnectorTaskId("task", 7), new ConnectorTaskId("task", 10)));
+        expectedAssignment.get(2).tasks().add(new ConnectorTaskId("task", 8));
 
         List<String> newConnectors = newConnectors(6, 11);
         assignor.assignConnectors(existingAssignment, newConnectors);
@@ -726,9 +732,9 @@ public class IncrementalCooperativeAssignorTest {
                 new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(0, assignor.scheduledRebalance);
         assertEquals(0, assignor.delay);
 
@@ -743,9 +749,9 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(time.milliseconds() + rebalanceDelay, assignor.scheduledRebalance);
         assertEquals(rebalanceDelay, assignor.delay);
 
@@ -758,9 +764,9 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.singleton(flakyWorker),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(flakyWorker),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(time.milliseconds() + rebalanceDelay, assignor.scheduledRebalance);
         assertEquals(rebalanceDelay, assignor.delay);
 
@@ -771,17 +777,17 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertTrue("Wrong assignment of lost connectors",
-                configuredAssignment.getOrDefault(flakyWorker, new WorkerLoad.Builder(flakyWorker).build())
-                        .connectors()
-                        .containsAll(lostAssignments.connectors()));
-        assertTrue("Wrong assignment of lost tasks",
-                configuredAssignment.getOrDefault(flakyWorker, new WorkerLoad.Builder(flakyWorker).build())
-                        .tasks()
-                        .containsAll(lostAssignments.tasks()));
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertTrue(configuredAssignment.getOrDefault(flakyWorker, new WorkerLoad.Builder(flakyWorker).build())
+                                .connectors()
+                                .containsAll(lostAssignments.connectors()),
+            "Wrong assignment of lost connectors");
+        assertTrue(configuredAssignment.getOrDefault(flakyWorker, new WorkerLoad.Builder(flakyWorker).build())
+                                .tasks()
+                                .containsAll(lostAssignments.tasks()),
+            "Wrong assignment of lost tasks");
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(0, assignor.scheduledRebalance);
         assertEquals(0, assignor.delay);
     }
@@ -806,9 +812,9 @@ public class IncrementalCooperativeAssignorTest {
                 new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(0, assignor.scheduledRebalance);
         assertEquals(0, assignor.delay);
 
@@ -823,9 +829,9 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(time.milliseconds() + rebalanceDelay, assignor.scheduledRebalance);
         assertEquals(rebalanceDelay, assignor.delay);
 
@@ -837,9 +843,9 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(time.milliseconds() + rebalanceDelay, assignor.scheduledRebalance);
         assertEquals(rebalanceDelay, assignor.delay);
 
@@ -849,13 +855,13 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, lostAssignmentsToReassign,
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertTrue("Wrong assignment of lost connectors",
-                lostAssignmentsToReassign.build().connectors().containsAll(lostAssignments.connectors()));
-        assertTrue("Wrong assignment of lost tasks",
-                lostAssignmentsToReassign.build().tasks().containsAll(lostAssignments.tasks()));
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertTrue(lostAssignmentsToReassign.build().connectors().containsAll(lostAssignments.connectors()),
+            "Wrong assignment of lost connectors");
+        assertTrue(lostAssignmentsToReassign.build().tasks().containsAll(lostAssignments.tasks()),
+            "Wrong assignment of lost tasks");
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(0, assignor.scheduledRebalance);
         assertEquals(0, assignor.delay);
     }
@@ -880,9 +886,9 @@ public class IncrementalCooperativeAssignorTest {
                 new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(0, assignor.scheduledRebalance);
         assertEquals(0, assignor.delay);
 
@@ -900,9 +906,9 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.singleton(newWorker),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(newWorker),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(time.milliseconds() + rebalanceDelay, assignor.scheduledRebalance);
         assertEquals(rebalanceDelay, assignor.delay);
 
@@ -915,11 +921,10 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        Set<String> expectedWorkers = new HashSet<>();
-        expectedWorkers.addAll(Arrays.asList(newWorker, flakyWorker));
-        assertEquals("Wrong set of workers for reassignments",
-                expectedWorkers,
-                assignor.candidateWorkersForReassignment);
+        Set<String> expectedWorkers = Set.of(newWorker, flakyWorker);
+        assertEquals(expectedWorkers,
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(time.milliseconds() + rebalanceDelay, assignor.scheduledRebalance);
         assertEquals(rebalanceDelay, assignor.delay);
 
@@ -945,13 +950,13 @@ public class IncrementalCooperativeAssignorTest {
             .tasks());
         listOfTasksInLast2Workers.addAll(configuredAssignment.getOrDefault(flakyWorker, new WorkerLoad.Builder(flakyWorker).build())
             .tasks());
-        assertTrue("Wrong assignment of lost connectors",
-            listOfConnectorsInLast2Workers.containsAll(lostAssignments.connectors()));
-        assertTrue("Wrong assignment of lost tasks",
-            listOfTasksInLast2Workers.containsAll(lostAssignments.tasks()));
-        assertEquals("Wrong set of workers for reassignments",
-            Collections.emptySet(),
-            assignor.candidateWorkersForReassignment);
+        assertTrue(listOfConnectorsInLast2Workers.containsAll(lostAssignments.connectors()),
+            "Wrong assignment of lost connectors");
+        assertTrue(listOfTasksInLast2Workers.containsAll(lostAssignments.tasks()),
+            "Wrong assignment of lost tasks");
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(0, assignor.scheduledRebalance);
         assertEquals(0, assignor.delay);
     }
@@ -976,9 +981,9 @@ public class IncrementalCooperativeAssignorTest {
                 new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(0, assignor.scheduledRebalance);
         assertEquals(0, assignor.delay);
 
@@ -993,9 +998,9 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(time.milliseconds() + rebalanceDelay, assignor.scheduledRebalance);
         assertEquals(rebalanceDelay, assignor.delay);
 
@@ -1008,9 +1013,9 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.singleton(veryFlakyWorker),
-                assignor.candidateWorkersForReassignment);
+        assertEquals(Set.of(veryFlakyWorker),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(time.milliseconds() + rebalanceDelay, assignor.scheduledRebalance);
         assertEquals(rebalanceDelay, assignor.delay);
 
@@ -1023,15 +1028,92 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, lostAssignmentsToReassign,
                 new ArrayList<>(configuredAssignment.values()));
 
-        assertTrue("Wrong assignment of lost connectors",
-                lostAssignmentsToReassign.build().connectors().containsAll(lostAssignments.connectors()));
-        assertTrue("Wrong assignment of lost tasks",
-                lostAssignmentsToReassign.build().tasks().containsAll(lostAssignments.tasks()));
-        assertEquals("Wrong set of workers for reassignments",
-                Collections.emptySet(),
-                assignor.candidateWorkersForReassignment);
+        assertTrue(lostAssignmentsToReassign.build().connectors().containsAll(lostAssignments.connectors()),
+            "Wrong assignment of lost connectors");
+        assertTrue(lostAssignmentsToReassign.build().tasks().containsAll(lostAssignments.tasks()),
+            "Wrong assignment of lost tasks");
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
         assertEquals(0, assignor.scheduledRebalance);
         assertEquals(0, assignor.delay);
+    }
+
+    @Test
+    public void testLostAssignmentHandlingWhenScheduledDelayIsDisabled() {
+        // Customize assignor for this test case
+        rebalanceDelay = 0;
+        time = new MockTime();
+        initAssignor();
+
+        assertTrue(assignor.candidateWorkersForReassignment.isEmpty());
+        assertEquals(0, assignor.scheduledRebalance);
+        assertEquals(0, assignor.delay);
+
+        Map<String, WorkerLoad> configuredAssignment = new HashMap<>();
+        configuredAssignment.put("worker0", workerLoad("worker0", 0, 2, 0, 4));
+        configuredAssignment.put("worker1", workerLoad("worker1", 2, 2, 4, 4));
+        configuredAssignment.put("worker2", workerLoad("worker2", 4, 2, 8, 4));
+
+        // No lost assignments
+        assignor.handleLostAssignments(new ConnectorsAndTasks.Builder().build(),
+                new ConnectorsAndTasks.Builder(),
+                new ArrayList<>(configuredAssignment.values()));
+
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
+        assertEquals(0, assignor.scheduledRebalance);
+        assertEquals(0, assignor.delay);
+
+        assignor.previousMembers = new HashSet<>(configuredAssignment.keySet());
+
+        String veryFlakyWorker = "worker1";
+        WorkerLoad lostLoad = configuredAssignment.remove(veryFlakyWorker);
+        ConnectorsAndTasks lostAssignments = new ConnectorsAndTasks.Builder()
+                .with(lostLoad.connectors(), lostLoad.tasks()).build();
+
+        // Lost assignments detected - Immediately reassigned
+        ConnectorsAndTasks.Builder lostAssignmentsToReassign = new ConnectorsAndTasks.Builder();
+        assignor.handleLostAssignments(lostAssignments, lostAssignmentsToReassign,
+                new ArrayList<>(configuredAssignment.values()));
+
+        assertEquals(Set.of(),
+            assignor.candidateWorkersForReassignment,
+            "Wrong set of workers for reassignments");
+        assertEquals(0, assignor.scheduledRebalance);
+        assertEquals(0, assignor.delay);
+        assertEquals(lostAssignments.connectors(),
+            lostAssignmentsToReassign.build().connectors(), "Wrong assignment of lost connectors");
+        assertEquals(lostAssignments.tasks(),
+            lostAssignmentsToReassign.build().tasks(), "Wrong assignment of lost tasks");
+    }
+
+    @Test
+    public void testScheduledDelayIsDisabled() {
+        // Customize assignor for this test case
+        rebalanceDelay = 0;
+        time = new MockTime();
+        initAssignor();
+
+        // First assignment with 2 workers and 2 connectors configured but not yet assigned
+        addNewEmptyWorkers("worker2");
+        performStandardRebalance();
+        assertDelay(0);
+        assertWorkers("worker1", "worker2");
+        assertConnectorAllocations(1, 1);
+        assertTaskAllocations(4, 4);
+        assertBalancedAndCompleteAllocation();
+
+        // Second assignment with only one worker remaining in the group. The worker that left the
+        // group was a follower. Re-assignments take place immediately
+        removeWorkers("worker2");
+        performStandardRebalance();
+        assertDelay(rebalanceDelay);
+        assertWorkers("worker1");
+        assertConnectorAllocations(2);
+        assertTaskAllocations(8);
+        assertBalancedAndCompleteAllocation();
     }
 
     @Test
@@ -1137,10 +1219,10 @@ public class IncrementalCooperativeAssignorTest {
                 leader,
                 "followMe:618",
                 CONFIG_OFFSET,
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Collections.emptySet(),
+                Set.of(),
+                Set.of(),
+                Set.of(),
+                Set.of(),
                 0
         );
         ExtendedWorkerState leaderState = new ExtendedWorkerState("followMe:618", CONFIG_OFFSET, leaderAssignment);
@@ -1152,16 +1234,16 @@ public class IncrementalCooperativeAssignorTest {
         when(coordinator.configSnapshot()).thenReturn(configState());
         Map<String, ByteBuffer> serializedAssignments = assignor.performAssignment(
                 leader,
-                ConnectProtocolCompatibility.COMPATIBLE.protocol(),
+                ConnectProtocolCompatibility.COMPATIBLE,
                 memberMetadata,
                 coordinator
         );
         serializedAssignments.forEach((worker, serializedAssignment) -> {
             ExtendedAssignment assignment = IncrementalCooperativeConnectProtocol.deserializeAssignment(serializedAssignment);
             assertEquals(
-                    "Incorrect protocol version in assignment for worker " + worker,
                     IncrementalCooperativeConnectProtocol.CONNECT_PROTOCOL_V1,
-                    assignment.version()
+                    assignment.version(),
+                    "Incorrect protocol version in assignment for worker " + worker
             );
         });
     }
@@ -1178,10 +1260,10 @@ public class IncrementalCooperativeAssignorTest {
                 leader,
                 "followMe:618",
                 CONFIG_OFFSET,
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Collections.emptySet(),
+                Set.of(),
+                Set.of(),
+                Set.of(),
+                Set.of(),
                 0
         );
         ExtendedWorkerState leaderState = new ExtendedWorkerState("followMe:618", CONFIG_OFFSET, leaderAssignment);
@@ -1193,16 +1275,16 @@ public class IncrementalCooperativeAssignorTest {
         when(coordinator.configSnapshot()).thenReturn(configState());
         Map<String, ByteBuffer> serializedAssignments = assignor.performAssignment(
                 leader,
-                ConnectProtocolCompatibility.SESSIONED.protocol(),
+                ConnectProtocolCompatibility.SESSIONED,
                 memberMetadata,
                 coordinator
         );
         serializedAssignments.forEach((worker, serializedAssignment) -> {
             ExtendedAssignment assignment = IncrementalCooperativeConnectProtocol.deserializeAssignment(serializedAssignment);
             assertEquals(
-                    "Incorrect protocol version in assignment for worker " + worker,
                     IncrementalCooperativeConnectProtocol.CONNECT_PROTOCOL_V2,
-                    assignment.version()
+                    assignment.version(),
+                    "Incorrect protocol version in assignment for worker " + worker
             );
         });
     }
@@ -1244,23 +1326,23 @@ public class IncrementalCooperativeAssignorTest {
 
     private void addNewEmptyWorkers(String... workers) {
         for (String worker : workers) {
-            addNewWorker(worker, Collections.emptyList(), Collections.emptyList());
+            addNewWorker(worker, List.of(), List.of());
         }
     }
 
     private void addNewWorker(String worker, List<String> connectors, List<ConnectorTaskId> tasks) {
         ConnectorsAndTasks assignment = new ConnectorsAndTasks.Builder().with(connectors, tasks).build();
         assertNull(
-                "Worker " + worker + " already exists",
-                memberAssignments.put(worker, assignment)
+                memberAssignments.put(worker, assignment),
+                "Worker " + worker + " already exists"
         );
     }
 
     private void removeWorkers(String... workers) {
         for (String worker : workers) {
             assertNotNull(
-                    "Worker " + worker + " does not exist",
-                    memberAssignments.remove(worker)
+                    memberAssignments.remove(worker),
+                    "Worker " + worker + " does not exist"
             );
         }
     }
@@ -1294,27 +1376,32 @@ public class IncrementalCooperativeAssignorTest {
 
     private void addNewConnector(String connector, int taskCount) {
         assertNull(
-                "Connector " + connector + " already exists",
-                connectors.put(connector, taskCount)
+                connectors.put(connector, taskCount),
+                "Connector " + connector + " already exists"
         );
     }
 
     private void removeConnector(String connector) {
         assertNotNull(
-                "Connector " + connector + " does not exist",
-                connectors.remove(connector)
+                connectors.remove(connector),
+                "Connector " + connector + " does not exist"
         );
     }
 
     private ClusterConfigState configState() {
         Map<String, Integer> taskCounts = new HashMap<>(connectors);
-        Map<String, Map<String, String>> connectorConfigs = transformValues(taskCounts, c -> Collections.emptyMap());
+        Map<String, Map<String, String>> connectorConfigs = transformValues(taskCounts, c -> Map.of());
         Map<String, TargetState> targetStates = transformValues(taskCounts, c -> TargetState.STARTED);
         Map<ConnectorTaskId, Map<String, String>> taskConfigs = taskCounts.entrySet().stream()
                 .flatMap(e -> IntStream.range(0, e.getValue()).mapToObj(i -> new ConnectorTaskId(e.getKey(), i)))
                 .collect(Collectors.toMap(
                         Function.identity(),
-                        connectorTaskId -> Collections.emptyMap()
+                        connectorTaskId -> Map.of()
+                ));
+        Map<String, AppliedConnectorConfig> appliedConnectorConfigs = connectorConfigs.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        e -> new AppliedConnectorConfig(e.getValue())
                 ));
         return new ClusterConfigState(
                 CONFIG_OFFSET,
@@ -1323,10 +1410,11 @@ public class IncrementalCooperativeAssignorTest {
                 connectorConfigs,
                 targetStates,
                 taskConfigs,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptySet(),
-                Collections.emptySet());
+                Map.of(),
+                Map.of(),
+                appliedConnectorConfigs,
+                Set.of(),
+                Set.of());
     }
 
     private void applyAssignments() {
@@ -1338,50 +1426,34 @@ public class IncrementalCooperativeAssignorTest {
             workerAssignment.tasks().removeAll(returnedAssignments.newlyRevokedTasks(worker));
             workerAssignment.tasks().addAll(returnedAssignments.newlyAssignedTasks(worker));
 
-            assertEquals(
-                    "Complete connector assignment for worker " + worker + " does not match expectations " +
-                            "based on prior assignment and new revocations and assignments",
-                    new HashSet<>(workerAssignment.connectors()),
-                    new HashSet<>(returnedAssignments.allAssignedConnectors().get(worker))
-            );
-            assertEquals(
-                    "Complete task assignment for worker " + worker + " does not match expectations " +
-                            "based on prior assignment and new revocations and assignments",
-                    new HashSet<>(workerAssignment.tasks()),
-                    new HashSet<>(returnedAssignments.allAssignedTasks().get(worker))
-            );
+            assertEquals(new HashSet<>(workerAssignment.connectors()),
+                new HashSet<>(returnedAssignments.allAssignedConnectors().get(worker)),
+                "Complete connector assignment for worker " + worker + " does not match expectations " +
+                    "based on prior assignment and new revocations and assignments");
+            assertEquals(new HashSet<>(workerAssignment.tasks()),
+                new HashSet<>(returnedAssignments.allAssignedTasks().get(worker)),
+                "Complete task assignment for worker " + worker + " does not match expectations " +
+                    "based on prior assignment and new revocations and assignments");
         });
     }
 
     private void assertEmptyAssignment() {
-        assertEquals(
-                "No connectors should have been newly assigned during this round",
-                Collections.emptyList(),
-                ConnectUtils.combineCollections(returnedAssignments.newlyAssignedConnectors().values())
-        );
-        assertEquals(
-                "No tasks should have been newly assigned during this round",
-                Collections.emptyList(),
-                ConnectUtils.combineCollections(returnedAssignments.newlyAssignedTasks().values())
-        );
-        assertEquals(
-                "No connectors should have been revoked during this round",
-                Collections.emptyList(),
-                ConnectUtils.combineCollections(returnedAssignments.newlyRevokedConnectors().values())
-        );
-        assertEquals(
-                "No tasks should have been revoked during this round",
-                Collections.emptyList(),
-                ConnectUtils.combineCollections(returnedAssignments.newlyRevokedTasks().values())
-        );
+        assertEquals(List.of(),
+            ConnectUtils.combineCollections(returnedAssignments.newlyAssignedConnectors().values()),
+            "No connectors should have been newly assigned during this round");
+        assertEquals(List.of(),
+            ConnectUtils.combineCollections(returnedAssignments.newlyAssignedTasks().values()),
+            "No tasks should have been newly assigned during this round");
+        assertEquals(List.of(),
+            ConnectUtils.combineCollections(returnedAssignments.newlyRevokedConnectors().values()),
+            "No connectors should have been revoked during this round");
+        assertEquals(List.of(),
+            ConnectUtils.combineCollections(returnedAssignments.newlyRevokedTasks().values()),
+            "No tasks should have been revoked during this round");
     }
 
     private void assertWorkers(String... workers) {
-        assertEquals(
-                "Wrong set of workers",
-                new HashSet<>(Arrays.asList(workers)),
-                returnedAssignments.allWorkers()
-        );
+        assertEquals(Set.of(workers), returnedAssignments.allWorkers(), "Wrong set of workers");
     }
 
     /**
@@ -1410,11 +1482,9 @@ public class IncrementalCooperativeAssignorTest {
                 .sorted()
                 .collect(Collectors.toList());
         List<Integer> actualAllocations = allocations(allocation);
-        assertEquals(
-                "Allocation of assigned " + allocated + " across cluster does not match expected counts",
-                expectedAllocations,
-                actualAllocations
-        );
+        assertEquals(expectedAllocations,
+            actualAllocations,
+            "Allocation of assigned " + allocated + " across cluster does not match expected counts");
     }
 
     private List<Integer> allocations(Function<ConnectorsAndTasks, ? extends Collection<?>> allocation) {
@@ -1428,25 +1498,25 @@ public class IncrementalCooperativeAssignorTest {
     private void assertNoRevocations() {
         returnedAssignments.newlyRevokedConnectors().forEach((worker, revocations) ->
                 assertEquals(
-                        "Expected no revocations to take place during this round, but connector revocations were issued for worker " + worker,
-                        Collections.emptySet(),
-                        new HashSet<>(revocations)
-                )
+                    Set.of(),
+                    new HashSet<>(revocations),
+                    "Expected no revocations to take place during this round, but connector revocations were issued for worker " + worker
+                                )
         );
         returnedAssignments.newlyRevokedTasks().forEach((worker, revocations) ->
                 assertEquals(
-                        "Expected no revocations to take place during this round, but task revocations were issued for worker " + worker,
-                        Collections.emptySet(),
-                        new HashSet<>(revocations)
-                )
+                    Set.of(),
+                    new HashSet<>(revocations),
+                    "Expected no revocations to take place during this round, but task revocations were issued for worker " + worker
+                                )
         );
     }
 
     private void assertDelay(int expectedDelay) {
         assertEquals(
-                "Wrong rebalance delay",
                 expectedDelay,
-                assignor.delay
+                assignor.delay,
+                "Wrong rebalance delay"
         );
     }
 
@@ -1470,13 +1540,13 @@ public class IncrementalCooperativeAssignorTest {
         );
 
         existingConnectors.retainAll(newConnectors);
-        assertEquals("Found connectors in new assignment that already exist in current assignment",
-                Collections.emptyList(),
-                existingConnectors);
+        assertEquals(List.of(),
+            existingConnectors,
+            "Found connectors in new assignment that already exist in current assignment");
         existingTasks.retainAll(newTasks);
-        assertEquals("Found tasks in new assignment that already exist in current assignment",
-                Collections.emptyList(),
-                existingConnectors);
+        assertEquals(List.of(),
+            existingConnectors,
+            "Found tasks in new assignment that already exist in current assignment");
     }
 
     private void assertBalancedAndCompleteAllocation() {
@@ -1494,23 +1564,17 @@ public class IncrementalCooperativeAssignorTest {
         int minTasks = taskCounts.get(0);
         int maxTasks = taskCounts.get(taskCounts.size() - 1);
 
-        assertTrue(
-                "Assignments are imbalanced. The spread of connectors across each worker is: " + connectorCounts,
-                maxConnectors - minConnectors <= 1
-        );
-        assertTrue(
-                "Assignments are imbalanced. The spread of tasks across each worker is: " + taskCounts,
-                maxTasks - minTasks <= 1
-        );
+        assertTrue(maxConnectors - minConnectors <= 1,
+            "Assignments are imbalanced. The spread of connectors across each worker is: " + connectorCounts);
+        assertTrue(maxTasks - minTasks <= 1,
+            "Assignments are imbalanced. The spread of tasks across each worker is: " + taskCounts);
     }
 
     private void assertCompleteAllocation() {
         List<String> allAssignedConnectors = ConnectUtils.combineCollections(memberAssignments.values(), ConnectorsAndTasks::connectors);
-        assertEquals(
-                "The set of connectors assigned across the cluster does not match the set of connectors in the config topic",
-                connectors.keySet(),
-                new HashSet<>(allAssignedConnectors)
-        );
+        assertEquals(connectors.keySet(),
+            new HashSet<>(allAssignedConnectors),
+            "The set of connectors assigned across the cluster does not match the set of connectors in the config topic");
 
         Map<String, List<ConnectorTaskId>> allAssignedTasks = ConnectUtils.combineCollections(memberAssignments.values(), ConnectorsAndTasks::tasks)
                 .stream()
@@ -1520,20 +1584,14 @@ public class IncrementalCooperativeAssignorTest {
             Set<ConnectorTaskId> expectedTasks = IntStream.range(0, taskCount)
                     .mapToObj(i -> new ConnectorTaskId(connector, i))
                     .collect(Collectors.toSet());
-            assertEquals(
-                    "The set of tasks assigned across the cluster for connector " + connector + " does not match the set of tasks in the config topic",
-                    expectedTasks,
-                    new HashSet<>(allAssignedTasks.get(connector))
-            );
+            assertEquals(expectedTasks,
+                new HashSet<>(allAssignedTasks.get(connector)),
+                "The set of tasks assigned across the cluster for connector " + connector + " does not match the set of tasks in the config topic");
         });
     }
 
     private static <T> void assertNoDuplicates(List<T> collection, String assertionMessage) {
-        assertEquals(
-                assertionMessage,
-                new HashSet<>(collection).size(),
-                collection.size()
-        );
+        assertEquals(new HashSet<>(collection).size(), collection.size(), assertionMessage);
     }
 
 }
