@@ -18,22 +18,22 @@ package org.apache.kafka.connect.runtime.rest;
 
 import org.apache.kafka.common.config.ConfigException;
 import org.apache.kafka.common.config.internals.BrokerSecurityConfigs;
-import org.junit.Test;
 
-import java.util.Arrays;
+import org.junit.jupiter.api.Test;
+
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import static org.apache.kafka.connect.runtime.rest.RestServerConfig.LISTENERS_DEFAULT;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class RestServerConfigTest {
 
-    private static final List<String> VALID_HEADER_CONFIGS = Arrays.asList(
+    private static final List<String> VALID_HEADER_CONFIGS = List.of(
             "add \t Cache-Control: no-cache, no-store, must-revalidate",
             "add \r X-XSS-Protection: 1; mode=block",
             "\n add Strict-Transport-Security: max-age=31536000; includeSubDomains",
@@ -46,7 +46,7 @@ public class RestServerConfigTest {
             "adDdate \n Last-Modified: \t 0"
     );
 
-    private static final List<String> INVALID_HEADER_CONFIGS = Arrays.asList(
+    private static final List<String> INVALID_HEADER_CONFIGS = List.of(
             "set \t",
             "badaction \t X-Frame-Options:DENY",
             "set add X-XSS-Protection:1",
@@ -68,13 +68,11 @@ public class RestServerConfigTest {
 
         props.put(RestServerConfig.LISTENERS_CONFIG, "http://a.b:9999");
         config = RestServerConfig.forPublic(null, props);
-        assertEquals(Arrays.asList("http://a.b:9999"), config.listeners());
+        assertEquals(List.of("http://a.b:9999"), config.listeners());
 
         props.put(RestServerConfig.LISTENERS_CONFIG, "http://a.b:9999, https://a.b:7812");
         config = RestServerConfig.forPublic(null, props);
-        assertEquals(Arrays.asList("http://a.b:9999", "https://a.b:7812"), config.listeners());
-
-        config = RestServerConfig.forPublic(null, props);
+        assertEquals(List.of("http://a.b:9999", "https://a.b:7812"), config.listeners());
     }
 
     @Test
@@ -105,7 +103,7 @@ public class RestServerConfigTest {
 
         // no value set for "admin.listeners"
         RestServerConfig config = RestServerConfig.forPublic(null, props);
-        assertNull("Default value should be null.", config.adminListeners());
+        assertNull(config.adminListeners(), "Default value should be null.");
 
         props.put(RestServerConfig.ADMIN_LISTENERS_CONFIG, "");
         config = RestServerConfig.forPublic(null, props);
@@ -113,7 +111,7 @@ public class RestServerConfigTest {
 
         props.put(RestServerConfig.ADMIN_LISTENERS_CONFIG, "http://a.b:9999, https://a.b:7812");
         config = RestServerConfig.forPublic(null, props);
-        assertEquals(Arrays.asList("http://a.b:9999", "https://a.b:7812"), config.adminListeners());
+        assertEquals(List.of("http://a.b:9999", "https://a.b:7812"), config.adminListeners());
 
         RestServerConfig.forPublic(null, props);
     }
@@ -124,7 +122,7 @@ public class RestServerConfigTest {
 
         props.put(RestServerConfig.ADMIN_LISTENERS_CONFIG, "http://a.b:9999,");
         ConfigException ce = assertThrows(ConfigException.class, () -> RestServerConfig.forPublic(null, props));
-        assertTrue(ce.getMessage().contains(" admin.listeners"));
+        assertTrue(ce.getMessage().contains("admin.listeners"));
     }
 
     @Test
