@@ -20,32 +20,33 @@ import org.apache.kafka.common.utils.LogCaptureAppender;
 import org.apache.kafka.connect.errors.DataException;
 import org.apache.kafka.connect.json.JsonConverter;
 import org.apache.kafka.connect.json.JsonConverterConfig;
-import org.junit.Test;
 
+import org.junit.jupiter.api.Test;
+
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import static org.hamcrest.CoreMatchers.containsString;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class OffsetUtilsTest {
 
     private static final JsonConverter CONVERTER = new JsonConverter();
 
     static {
-        CONVERTER.configure(Collections.singletonMap(JsonConverterConfig.SCHEMAS_ENABLE_CONFIG, "false"), true);
+        CONVERTER.configure(Map.of(JsonConverterConfig.SCHEMAS_ENABLE_CONFIG, "false"), true);
     }
 
     @Test
     public void testValidateFormatNotMap() {
         DataException e = assertThrows(DataException.class, () -> OffsetUtils.validateFormat(new Object()));
-        assertThat(e.getMessage(), containsString("Offsets must be specified as a Map"));
+        assertTrue(e.getMessage().contains("Offsets must be specified as a Map"));
     }
 
     @Test
@@ -54,70 +55,72 @@ public class OffsetUtilsTest {
         offsetData.put("k1", "v1");
         offsetData.put(1, "v2");
         DataException e = assertThrows(DataException.class, () -> OffsetUtils.validateFormat(offsetData));
-        assertThat(e.getMessage(), containsString("Offsets may only use String keys"));
+        assertTrue(e.getMessage().contains("Offsets may only use String keys"));
     }
 
     @Test
     public void testValidateFormatMapWithNonPrimitiveKeys() {
-        Map<Object, Object> offsetData = Collections.singletonMap("key", new Object());
+        Map<Object, Object> offsetData = Map.of("key", new Object());
         DataException e = assertThrows(DataException.class, () -> OffsetUtils.validateFormat(offsetData));
-        assertThat(e.getMessage(), containsString("Offsets may only contain primitive types as values"));
+        assertTrue(e.getMessage().contains("Offsets may only contain primitive types as values"));
 
-        Map<Object, Object> offsetData2 = Collections.singletonMap("key", new ArrayList<>());
+        Map<Object, Object> offsetData2 = Map.of("key", new ArrayList<>());
         e = assertThrows(DataException.class, () -> OffsetUtils.validateFormat(offsetData2));
-        assertThat(e.getMessage(), containsString("Offsets may only contain primitive types as values"));
+        assertTrue(e.getMessage().contains("Offsets may only contain primitive types as values"));
     }
 
     @Test
     public void testValidateFormatWithValidFormat() {
-        Map<Object, Object> offsetData = Collections.singletonMap("key", 1);
+        Map<Object, Object> offsetData = Map.of("key", 1);
         // Expect no exception to be thrown
         OffsetUtils.validateFormat(offsetData);
     }
 
     @Test
+    public void testProcessPartitionKeyWithUnknownSerialization() {
+        assertInvalidPartitionKey(
+                new byte[]{0},
+                "Ignoring offset partition key with unknown serialization");
+        assertInvalidPartitionKey(
+                "i-am-not-json".getBytes(StandardCharsets.UTF_8),
+                "Ignoring offset partition key with unknown serialization");
+    }
+
+    @Test
     public void testProcessPartitionKeyNotList() {
-        try (LogCaptureAppender logCaptureAppender = LogCaptureAppender.createAndRegister(OffsetUtils.class)) {
-            Map<String, Set<Map<String, Object>>> connectorPartitions = new HashMap<>();
-            OffsetUtils.processPartitionKey(serializePartitionKey(new HashMap<>()), new byte[0], CONVERTER, connectorPartitions);
-            // Expect no partition to be added to the map since the partition key is of an invalid format
-            assertEquals(0, connectorPartitions.size());
-            assertEquals(1, logCaptureAppender.getMessages().size());
-            assertThat(logCaptureAppender.getMessages().get(0),
-                    containsString("Ignoring offset partition key with an unexpected format"));
-        }
+        assertInvalidPartitionKey(
+                new byte[]{},
+                "Ignoring offset partition key with an unexpected format");
+        assertInvalidPartitionKey(
+                serializePartitionKey(new HashMap<>()),
+                "Ignoring offset partition key with an unexpected format");
     }
 
     @Test
     public void testProcessPartitionKeyListWithOneElement() {
-        try (LogCaptureAppender logCaptureAppender = LogCaptureAppender.createAndRegister(OffsetUtils.class)) {
-            Map<String, Set<Map<String, Object>>> connectorPartitions = new HashMap<>();
-            OffsetUtils.processPartitionKey(serializePartitionKey(Collections.singletonList("")), new byte[0], CONVERTER, connectorPartitions);
-            // Expect no partition to be added to the map since the partition key is of an invalid format
-            assertEquals(0, connectorPartitions.size());
-            assertEquals(1, logCaptureAppender.getMessages().size());
-            assertThat(logCaptureAppender.getMessages().get(0),
-                    containsString("Ignoring offset partition key with an unexpected number of elements"));
-        }
+        assertInvalidPartitionKey(
+                serializePartitionKey(List.of("")),
+                "Ignoring offset partition key with an unexpected number of elements");
     }
 
     @Test
     public void testProcessPartitionKeyListWithElementsOfWrongType() {
+        assertInvalidPartitionKey(
+                serializePartitionKey(List.of(1, new HashMap<>())),
+                "Ignoring offset partition key with an unexpected format for the first element in the partition key list");
+        assertInvalidPartitionKey(
+                serializePartitionKey(List.of("connector-name", new ArrayList<>())),
+                "Ignoring offset partition key with an unexpected format for the second element in the partition key list");
+    }
+
+    public void assertInvalidPartitionKey(byte[] key, String message) {
         try (LogCaptureAppender logCaptureAppender = LogCaptureAppender.createAndRegister(OffsetUtils.class)) {
             Map<String, Set<Map<String, Object>>> connectorPartitions = new HashMap<>();
-            OffsetUtils.processPartitionKey(serializePartitionKey(Arrays.asList(1, new HashMap<>())), new byte[0], CONVERTER, connectorPartitions);
+            OffsetUtils.processPartitionKey(key, new byte[0], CONVERTER, connectorPartitions);
             // Expect no partition to be added to the map since the partition key is of an invalid format
             assertEquals(0, connectorPartitions.size());
             assertEquals(1, logCaptureAppender.getMessages().size());
-            assertThat(logCaptureAppender.getMessages().get(0),
-                    containsString("Ignoring offset partition key with an unexpected format for the first element in the partition key list"));
-
-            OffsetUtils.processPartitionKey(serializePartitionKey(Arrays.asList("connector-name", new ArrayList<>())), new byte[0], CONVERTER, connectorPartitions);
-            // Expect no partition to be added to the map since the partition key is of an invalid format
-            assertEquals(0, connectorPartitions.size());
-            assertEquals(2, logCaptureAppender.getMessages().size());
-            assertThat(logCaptureAppender.getMessages().get(1),
-                    containsString("Ignoring offset partition key with an unexpected format for the second element in the partition key list"));
+            assertTrue(logCaptureAppender.getMessages().get(0).contains(message));
         }
     }
 
@@ -125,8 +128,18 @@ public class OffsetUtilsTest {
     public void testProcessPartitionKeyValidList() {
         try (LogCaptureAppender logCaptureAppender = LogCaptureAppender.createAndRegister(OffsetUtils.class)) {
             Map<String, Set<Map<String, Object>>> connectorPartitions = new HashMap<>();
-            OffsetUtils.processPartitionKey(serializePartitionKey(Arrays.asList("connector-name", new HashMap<>())), new byte[0], CONVERTER, connectorPartitions);
+            OffsetUtils.processPartitionKey(serializePartitionKey(List.of("connector-name", new HashMap<>())), new byte[0], CONVERTER, connectorPartitions);
             assertEquals(1, connectorPartitions.size());
+            assertEquals(0, logCaptureAppender.getMessages().size());
+        }
+    }
+
+    @Test
+    public void testProcessPartitionKeyNullPartition() {
+        try (LogCaptureAppender logCaptureAppender = LogCaptureAppender.createAndRegister(OffsetUtils.class)) {
+            Map<String, Set<Map<String, Object>>> connectorPartitions = new HashMap<>();
+            OffsetUtils.processPartitionKey(serializePartitionKey(Arrays.asList("connector-name", null)), new byte[0], CONVERTER, connectorPartitions);
+            assertEquals(Map.of(), connectorPartitions);
             assertEquals(0, logCaptureAppender.getMessages().size());
         }
     }
